# MyTemplates

./: .dccache  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  meson.build  meson.options
.cache/clangd/index/: hello-world.c.9F5D931B843C0FC3.idx  hello-world.h.61B24F19ACD20D0F.idx  main.c.5DDFC3C9D02362C6.idx
.github/ISSUE_TEMPLATE/: ✨-feature-request--add-new-function.md  🐛-bug-report.md
.github/workflows/: codeQL.yml  codeql.yml  github-actions-demo.yml  snyk-container.yml  snyk-security.yml  snyk.yml  test.yml  trivy.yml  ubuntu-latest-debug.yml  ubuntu-latest-release.yml  ubuntu-latest-test.yml  windows-latest-release.yml
config/: banner.mk  bar.mk  checker.mk  colors.mk  files.mk  icons.mk  project.mk
containers/debian-stable-slim/: Dockerfile
containers/gcc/: Dockerfile
containers/make/: Dockerfile
containers/test/: Dockerfile
containers/ubuntu2204/: Dockerfile
containers/wine_alpine/: Dockerfile
env_build/alpine_3.19.0_amd64/: Dockerfile
env_build/alpine_amd64/: Dockerfile
inc/: hello-world.h  mylib.h  project.h
mk/: banner.mk  files.mk  project.mk
src/: div.c  hello-world.c  main.c  mylib.c
subprojects/: criterion.wrap
test/: test1.c  test1.test  test_add.c
tests/: mylib.c
